fixed more spacing issues

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -111,11 +111,11 @@ p{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-gap: 40px;
+    padding-bottom: 60px;
 }
 
 .feat-col {
     padding: 0px;
-    margin-bottom: 60px;
 }
 
 // TEAM SECTION STYLES
